# homelab

./: Makefile  README-LINTING.md  README.md  pyproject.toml
2048-game/: Pulumi.yaml  __main__.py
2048-game/manifest_yamls/: ingress-game-deployment.yaml
airflow/: .gitignore  Dockerfile  Pulumi.yaml  __main__.py  create_fernet_key.txt  requirements.txt
airflow/manifest_yamls/: apache-airflow-ngrok-ingress.yaml  non-root-s3-mp-pvc.yaml  statsd-configmap-exporter-mappings.yaml
airflow/test_dag/: example_dag.py
cacklacky/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  requirements.txt
cacklacky/trino/: properties_configmap.py  properties_deployments.py  sampletrino.yaml
k8s-provision/: Pulumi.yaml  __main__.py
k8s-single-node/: Pulumi.yaml  __main__.py  requirements.txt
mysql_pg_migration/: Dockerfile  README.md
ngrok-ingress-example/: .gitignore  Pulumi.yaml  __main__.py  example.yaml  requirements.txt
ngrok-ingress-example/archive_manifest_yamls/: cluster-role-bindings.yaml  cluster-roles.yaml  config-maps.yaml  deployment.yaml  role-binding.yaml  service-account.yaml
ngrok-ingress-example/manifest_yamls/: cluster-role-bindings.yaml  cluster-roles.yaml  custom-resource-definitions.yaml  ingress-deployment.yaml  ingress-game-deployment.yaml  role.yaml  test-this.yaml
quickstart/: README.md  __main__.py
rancher-deploy/: .gitignore  Pulumi.yaml  __main__.py
rancher-deploy/modified-rancher-helm-yamls/: values.yaml
rancher-deploy/modified-rancher-helm-yamls/templates/: ingress.yaml
s3_pvc/: .gitignore  Pulumi.yaml  __main__.py  requirements.txt
s3_pvc/manifest_yamls/: example.yaml
tailscale-operator/: Pulumi.yaml  __main__.py  requirements.txt  tailscale-operator.yaml
test-k8s-provision/: Pulumi.yaml  __main__.py  requirements.txt
utilities/: _yaml.py
